<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="me_item_collect">我的收藏</string>
    <string name="me_item_coin">我的积分</string>
    <string name="me_item_settings">系统设置</string>
    <string name="me_item_todo">TODO</string>
    <string name="me_item_share">我的分享</string>

    <string name="me_account_default_text">未登录</string>
    <string name="me_account_info_text">等级：%1$d  排名：%2$s</string>

    <!--  coin  -->
    <string name="coin_title_label_text">每天登陆赚取积分</string>
    <string name="coin_total_description">当前积分总数</string>
    <string name="coin_default_value">0</string>
    <string name="coin_to_rank_text">查看积分排行榜</string>
    <string name="coin_rank_title">积分排行榜</string>
    <string name="coin_help_title">本站积分规则</string>

    <!--  collect  -->
    <string name="collect_remove_item_success">移除收藏成功</string>

    <!--  settings  -->
    <string name="dark_mode_system">夜间模式跟随系统设置</string>
    <string name="dark_mode_night">夜间模式</string>
    <string name="settings_clear_text">清除缓存</string>
    <string name="settings_logout">退出登陆</string>
    <string name="settings_clear_title">确认清除缓存?</string>
    <string name="settings_clear_success">清除成功</string>
    <string name="settings_clear_failed">清除失败</string>
    <string name="settings_logout_title">确认退出登陆?</string>
</resources>