<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="OnCheckedChangeListener"
            type="android.widget.CompoundButton.OnCheckedChangeListener" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorThemeBackground">

        <com.lee.library.widget.toolbar.CustomToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:onClick="@{onClickListener}"
            app:layout_constraintTop_toTopOf="parent">

            <com.lee.library.widget.RoundImageView
                android:id="@+id/iv_header"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="36dp"
                android:src="@drawable/vector_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_mode="circle"
                app:lineColor="@color/colorThemeFocus"
                app:lineWidth="2dp" />

            <TextView
                android:id="@+id/tv_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/me_account_default_text"
                android:textColor="@color/colorThemeAccent"
                android:textSize="@dimen/font_size_large"
                app:layout_constraintBottom_toTopOf="@id/tv_level"
                app:layout_constraintStart_toEndOf="@id/iv_header"
                app:layout_constraintTop_toTopOf="@id/iv_header" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorThemeFocus"
                android:textSize="@dimen/font_size_small"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_header"
                app:layout_constraintStart_toStartOf="@id/tv_account_name"
                app:layout_constraintTop_toBottomOf="@id/tv_account_name" />

        </com.lee.library.widget.toolbar.CustomToolbarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_integral"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    app:leftDrawable="@drawable/vector_coin"
                    app:leftText="@string/me_item_coin" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_collect"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    app:leftDrawable="@drawable/vector_collect"
                    app:leftText="@string/me_item_collect" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_share"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    app:leftDrawable="@drawable/vector_share"
                    app:leftText="@string/me_item_share" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_todo"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    app:leftDrawable="@drawable/vector_todo"
                    app:leftText="@string/me_item_todo" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_settings"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    app:leftDrawable="@drawable/vector_settings"
                    app:leftText="@string/me_item_settings" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_logout"
                    style="@style/CommendLineButtonView"
                    android:onClick="@{onClickListener}"
                    android:visibility="gone"
                    app:leftDrawable="@drawable/vector_logout"
                    app:leftText="@string/me_item_logout" />

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_system"
                    style="@style/CommendLineButtonSwitchView"
                    android:layout_marginTop="@dimen/medium_offset"
                    app:leftText="@string/dark_mode_system">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_system_enable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onCheckedChanged="@{OnCheckedChangeListener}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:theme="@style/Switch" />

                </com.lee.playandroid.me.ui.widget.LineButtonView>

                <com.lee.playandroid.me.ui.widget.LineButtonView
                    android:id="@+id/line_night"
                    style="@style/CommendLineButtonSwitchView"
                    app:leftText="@string/dark_mode_night">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_dark_enable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onCheckedChanged="@{OnCheckedChangeListener}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:theme="@style/Switch" />

                </com.lee.playandroid.me.ui.widget.LineButtonView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>